wandb/run-20250413_225258-cogzf3q8/files/output.log
{'env': 'cartpole', 'algorithm': 'dueling_dqn', 'use_max': False, 'buffer_size': 100000, 'learning_rate': 0.00011685322633948464, 'value_learning_rate': 0.001, 'batch_size': 256, 'gamma': 0.99, 'update_period': 4, 'use_baseline': True, 'wandb_sweep': True, 'sweep_id': None, 'wandb_entity': 'da24d008-iit-madras', 'wandb_project': 'rl-assignment-2'}
Episode 100	Average Score: 111.70
Episode 188	Average Score: 285.88
[34m[1mwandb[0m: [32m[41mERROR[0m Error while calling W&B API: could not find agent 8oco2t3u during agentHeartbeat (<Response [404]>)
Exception in thread Thread-3 (_heartbeat):
Traceback (most recent call last):
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/sdk/internal/internal_api.py", line 3144, in agent_heartbeat
    response = self.gql(
               ^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/sdk/internal/internal_api.py", line 370, in gql
    ret = self._retry_gql(
          ^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/sdk/lib/retry.py", line 134, in __call__
    result = self._call_fn(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/sdk/internal/internal_api.py", line 398, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/sdk/lib/gql_request.py", line 59, in execute
    request.raise_for_status()
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/requests/models.py", line 1024, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/threading.py", line 1045, in _bootstrap_inner
    self.run()
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/threading.py", line 982, in run
    self._target(*self._args, **self._kwargs)
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/agents/pyagent.py", line 165, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/apis/internal.py", line 161, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/site-packages/wandb/sdk/internal/internal_api.py", line 3155, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/ast.py", line 64, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/anaconda3/envs/rl_env/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    404 Client Error: Not Found for url: https://api.wandb.ai/graphql
        ^^^^^^
SyntaxError: invalid syntax
[34m[1mwandb[0m: Ctrl + C detected. Stopping sweep.
